--- a/2013/1km paper/elastic_1km_npb.tex
+++ b/2013/1km paper/elastic_1km_npb.tex
@@ -99,7 +99,7 @@
 
 \begin{frontmatter}
 
-\title{Measurement of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the Coulomb-Nuclear Interference Region and Determination of the $\mathbf{\rho}$-Parameter}
+\title{Measurement of Elastic pp Scattering at $\sqrt{\hbox{s}} = \hbox{8}$\,TeV in the Coulomb-Nuclear Interference Region -- Determination of the $\mathbf{\rho}$-Parameter and the Total pp Cross-Section}
 
 \input authorlist_npb
 
