--- a/2013/1km paper/experimental_apparatus.tex
+++ b/2013/1km paper/experimental_apparatus.tex
@@ -14,7 +14,7 @@ The data analysed here come from the RPs only. A RP is a movable beam-pipe
 insertion capable of approaching the LHC beam to less than a millimeter, in 
 order to detect protons with scattering angles of only a few microradians. 
 The proton spectrometer is organised in two RP stations: one on the left side of the IP 
-(LHC sector 45) and one on the right (LHC sector 56), see Figure~\ref{fig:rpsketch}.
+(LHC sector 45) and one on the right (LHC sector 56), see Figure~\ref{fig:rpsketch} (left).
 Each RP station, located between 215 and 220\,m from the IP, is composed of two 
 units: ``near'' (215\,m from the IP) and ``far'' (220\,m). 
 A unit consists of 3 RPs, one
@@ -36,9 +36,10 @@ This report uses a reference frame where $x$ denotes the horizontal axis (pointi
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=0.6\textwidth]{fig/elastic_principle.pdf}
+\includegraphics[width=0.7\textwidth]{fig/elastic_principle.pdf}
+\includegraphics[width=0.2\textwidth]{fig/stationScheme.pdf}
 \caption{%
-Schematic view of the RP stations at $\pm220\,$m from IP5 with two proton tracks from an elastic event. Also shown are the built-in beam position monitors, BPM, and beam loss monitors, BLM.
+Left: schematic view of the RP stations at $\pm220\,$m from IP5 with two proton tracks from an elastic event. Also shown are the built-in beam position monitors, BPM, and beam loss monitors, BLM. Right: Schematic view of the silicon detector positions in a RP station with a track traversing the overlap zone between top and horizontal detectors, providing detector alignment information. 
 }
 \label{fig:rpsketch}
 \end{center}
