--- a/2013/1km paper/beam_optics.tex
+++ b/2013/1km paper/beam_optics.tex
@@ -1,7 +1,7 @@
 \section{Beam Optics}
 \label{sec:beam optics}
 %
-The beam optics relates the proton kinematical states at the IP and at the RP location. A proton emerging from the interaction vertex $(x^*$, $y^*)$ at the angle $(\theta_x^*,\theta_y^*)$ (relative to the $z$ axis) and with momentum $p\,(1+\xi)$, where $p$ is the nominal initial-state proton momentum, is transported along the outgoing beam through the LHC's dipole and quadrupole magnets. It arrives at the RPs in the transverse position
+The beam optics relates the proton kinematical states at the IP and at the RP location. A proton emerging from the interaction vertex $(x^*$, $y^*)$ at the angle $(\theta_x^*,\theta_y^*)$ (relative to the $z$ axis) and with momentum $p\,(1+\xi)$, where $p$ is the nominal initial-state proton momentum, is transported along the outgoing beam through the LHC magnets. It arrives at the RPs in the transverse position
 \begin{equation}
 \label{eq:prot trans}
 x(z_{\rm RP}) = L_x(z_{\rm RP})\, \theta_x^*\ +\ v_x(z_{\rm RP})\, x^*\ +\ D_x(z_{\rm RP})\, \xi\ ,\quad y(z_{\rm RP}) = L_y(z_{\rm RP})\, \theta_y^*\ +\ v_y(z_{\rm RP})\, y^*\ +\ D_y(z_{\rm RP})\, \xi \quad
@@ -14,7 +14,7 @@ Note that for elastic collisions the dispersion terms $D\,\xi$ can be ignored be
 
 The data for the analysis presented here have been taken with a new, special optics, conventionally labelled by the value of the $\beta$-function at the interaction point, $\beta^{*} = 1000\,$m, and specifically developed for measuring low-$|t|$ elastic scattering. It maximises the vertical effective length $L_{y}$ at the RP position $z = 220\un{m}$ and minimises the vertical magnification $|v_{y}|$ at $z = 220\,$m (Table~\ref{tab:optics}). This configuration is called
 ``parallel-to-point focussing'' because all protons with the same angle in the IP are focussed on one point in the RP at 220\,m. It optimises the sensitivity to the vertical projection of the scattering angle -- and hence to $|t|$ -- while minimising the influence of the vertex position. 
-In the horizontal projection the parallel-to-point focussing condition is not fulfilled, but -- unlike in the $\beta^{*} = 90\,$m optics used for previous measurements~\cite{epl96,epl101-el,epl101-tot,prl111} -- the effective length $L_{x}$ at $z = 220\,$m is non-zero, which helps in the reconstruction of the horizontal component of the scattering angle.
+In the horizontal projection the parallel-to-point focussing condition is not fulfilled, but -- unlike in the $\beta^{*} = 90\,$m optics used for previous measurements~\cite{epl96,epl101-el,epl101-tot,prl111} -- the effective length $L_{x}$ at $z = 220\,$m is non-zero, which reduces the uncertainty in the horizontal component of the scattering angle.
 %
 \begin{table}
 \caption{
