--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,10 +1,9 @@
 \section{Coulomb-Nuclear Interference}
 \label{sec:coulomb}
 
-The Coulomb-nuclear interference (CNI) can be used to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. Regarding the modulus, we discuss a relevant question whether the earlier reported non-exponentiality of differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives an important contribution. Concerning the phase, we will test several parametrisations with different physics interpretations and determine the phase value at $t = 0$ (as the $\rho$ parameter).
+The Coulomb-nuclear interference (CNI) can be used to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. 
 
-
-For the modulus, a relevant question is whether the earlier reported non-exponentiality of differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives an important contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested and the phase value at $t = 0$ will be determined (as the $\rho$ parameter).
+For the modulus, a relevant question is whether the earlier reported non-exponentiality of the differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives a sizeable contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested; for each of them the $\rho$ parameter (representative for the phase value at $t = 0$ according to Eq.~(\ref{eq:rho def})) will be determined.
 
 Section~\ref{sec:cni framework} outlines the theoretical concepts needed to describe the CNI effects. Section~\ref{sec:cni anal proc} provides details on fitting procedures used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss the fit results for two relevant physics alternatives: purely exponential and non-exponential nuclear modulus.
 
@@ -15,14 +14,12 @@ Section~\ref{sec:cni framework} outlines the theoretical concepts needed to desc
 \subsection{Theoretical Framework}
 \label{sec:cni framework}
 
-The amplitude describing elastic scattering of protons may be expected to receive three contributions, each corresponding to one of the following Feynman diagram sets.
+The amplitude describing elastic scattering of protons may be expected to receive three contributions, each corresponding to one of the following sets of Feynman diagrams.
 \begin{itemize}
 \item Containing QED elements only. This amplitude can be obtained by perturbative calculations, see Section~\ref{sec:cni coulomb}.
 \item Containing QCD elements only. This amplitude is not directly calculable from the QCD lagrangian, Sections~\ref{sec:cni nuclear modulus} and \ref{sec:cni nuclear phase} will propose several phenomenologically motived parametrisations.
-\item Containing both QED and QCD elements. This contribution can not be directly calculated from the lagrangians, neither ad hoc parametrisation can be used -- this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce two interference formulae attempting to calculate corresponding effects.
+\item Containing both QED and QCD elements. This contribution can neither be directly calculated from the Lagrangians, nor can \textit{ad hoc} parametrisations be used -- this amplitude is correlated with the previous two. Section~\ref{sec:cni interference} will introduce two interference formulae attempting to calculate the corresponding effects.
 \end{itemize}
-
-%\TODO{Thus, the ``interference'' effects in the cross-section have two sources: on amplitude level the latter class of diagrams and on cross-section level via the interference between the amplitude contributions.}
 
 %------------------------------------------------------------------
 \subsubsection{Coulomb Amplitude}
@@ -50,7 +47,7 @@ At $|t| \gtrsim 0.02\un{GeV^2}$ the effects due to the Coulomb interaction are n
 \end{equation}
 where $N_b$ is the number of free parameters in the exponent. Consistently with \cite{8tev-90m}, the parameter $b_1$ gives the forward diffractive slope and $a$ the intercept of the differential cross-section at $t=0$. This parametrisation is also compatible with a number of theoretical models (see e.g.~\cite{elegent}).
 
-Since the calculation of CNI may, in principle, involve integrations (e.g.~Eq.~(\ref{eq:int kl})), it is necessary to extend the parametrisation meaningfully to $|t| > 0.2\un{GeV^2}$. Therefore, at $|t| > 0.5\un{GeV^2}$, the parametrisation follows a preliminary cross-section derived from the same data set as in \cite{8tev-90m} which features a dip-bump structure similar to the one observed at $\sqrt{s} = 7\un{TeV}$ \cite{epl95}. The region $0.2 < |t| < 0.5\un{GeV^2}$ is for a smooth transition between the parametrisation in Eq.~(\ref{eq:nuc mod}) and the high $|t|$ part. It will be shown that changing the high-$|t|$ part has negligible impact on the results presented later on.
+Since the calculation of CNI may, in principle, involve integrations (e.g.~Eq.~(\ref{eq:int kl})), it is necessary to extend the parametrisation meaningfully to $|t| > 0.2\un{GeV^2}$. Therefore, at $|t| > 0.5\un{GeV^2}$, the parametrisation follows a preliminary cross-section derived from the same data set as in \cite{8tev-90m} which features a dip-bump structure similar to the one observed at $\sqrt{s} = 7\un{TeV}$ \cite{epl95}. In the region $0.2 < |t| < 0.5\un{GeV^2}$ a smooth transition between the parametrisation in Eq.~(\ref{eq:nuc mod}) and the high-$|t|$ part is modelled. It will be shown that changing the high-$|t|$ part has negligible impact on the results presented later on.
 
 
 %------------------------------------------------------------------
@@ -66,7 +63,7 @@ Since the calculation of CNI may, in principle, involve integrations (e.g.~Eq.~(
 \end{center}
 \end{figure*}
 
-Let us consider the parametrisations below.
+The following phase parametrisations are considered.
 
 \begin{enumerate}
 
@@ -75,9 +72,9 @@ Let us consider the parametrisations below.
 A {\bf constant phase} is obviously the simplest choice:
 \begin{equation}
 \label{eq:nuc phase con}
-\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const}
+\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho = \hbox{const} \quad .
 \end{equation}
-leading to a strict proportionality of real and imaginary part of the amplitude at all $t$. This parametrisation is not compatible with Martin's theorem \cite{martin97} stating that, under some assumptions, the real part of an even-signature scattering amplitude must change sign at low $|t|$.
+It leads to a strict proportionality between the real and the imaginary part of the amplitude at all $t$. This parametrisation is not compatible with Martin's theorem \cite{martin97} stating that, under some assumptions, the real part of an even-signature scattering amplitude must change sign at low $|t|$.
 
 % ***
 \item[b)]
@@ -96,7 +93,7 @@ The parametrisation by {\bf Bailly et al.}~\cite{bailly87}:
 	\arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan {\rho\over 1 - {t\over t_{\rm d}}}
 	%\arg {\cal A}^{\rm N}(t) = \arctan \left[ {1\over\rho} \left(1 - {t\over t_{\rm d}} \right) \right]\ ,
 \end{equation}
-where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenkovszky et al., see Figure~\ref{fig:phase illustration}. Similarly to the constant phase, this parametrisation is not compatible with Martin's theorem \cite{martin97}.
+where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenkovszky et al., see Figure~\ref{fig:phase illustration}. Like the constant phase, this parametrisation is not compatible with Martin's theorem~\cite{martin97}.
 
 % ***
 \item[d)]
@@ -105,7 +102,7 @@ The {\bf peripheral phase} \cite{kl94} provides an alternative to the above desc
 \label{eq:nuc phase per}
 \arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}
 \end{equation}
-can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and asymptotically returns to its value value at $t=0$. A set of reasonable parameter values at $\sqrt s = 8\un{TeV}$ are
+can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and asymptotically returns to its value at $t=0$. A set of reasonable parameter values at $\sqrt s = 8\un{TeV}$ are
 \begin{equation}
 \label{eq:nuc phase per val}
 	\zeta_1 = 800\ ,\qquad
@@ -116,7 +113,7 @@ can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and a
 
 Figure~\ref{fig:phase illustration} shows on the same plot a comparison of phase predictions by several models to typical examples of parametrisations proposed above.
 
-It should be noted that the nuclear phase has a strong influence on the amplitude behaviour in the space of impact parameter $b$ (for detailed discussion see e.g.~Section 3 in~\cite{klk02}). A particularly decisive feature is the rate of phase variation at low $|t|$. Looking at Figure~\ref{fig:phase illustration} one can see that the constant, standard and Bailly phases are essentially flat at low $|t|$, thus leading to qualitatively similar pictures in the impact parameter space: elastic collisions more central (preferring lower values of $b$) than the inelastic ones. Conversely, the peripheral phase parametrisation can yield a description with the opposite hierarchy, which is argued to be more natural by some authors (e.g. Section~4 in~\cite{kl96}). An impact-parameter study of the presented data will be given at end of Section~\ref{sec:fit exp3}.
+It should be noted that the nuclear phase has a strong influence on the amplitude behaviour in the space of impact parameter $b$ (for a detailed discussion see e.g.~Section~3 in~\cite{klk02}). A particularly decisive feature is the rate of phase variation at low $|t|$. Looking at Figure~\ref{fig:phase illustration} one can see that the constant, standard and Bailly phases are essentially flat at low $|t|$, thus leading to qualitatively similar pictures in the impact parameter space: elastic collisions being more central (preferring lower values of $b$) than the inelastic ones. Conversely, the peripheral phase parametrisation can yield a description with the opposite hierarchy, which is argued to be more natural by some authors (e.g. Section~4 in~\cite{kl96}). An impact-parameter study of the presented data will be given at end of Section~\ref{sec:fit exp3}.
 
 %------------------------------------------------------------------
 \subsubsection{Coulomb-Nuclear Interference Formulae}
@@ -128,20 +125,20 @@ The {\bf simplified West-Yennie formula (SWY)} \cite{wy68} was derived in the fr
 	{\d\sigma\over \d t}^{\rm C+N} = {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2 \e^{\I\alpha \Phi(t)} + {\cal A}^{\rm N} \right |^2\ ,\qquad
 	\Phi(t) = - \left( \log {b_1 |t|\over 2} + \gamma \right)\ ,
 \end{equation}
-where $\alpha$ is the fine-structure constant and $\gamma \doteq 0.577$ the Euler constant. Despite the many limitations, the formula has extensively been used in past data analyses. For backward-comparison reasons we consider it also in this report.
+where $\alpha$ is the fine-structure constant and $\gamma \doteq 0.577$ the Euler constant. Despite the many limitations, the formula has been extensively used in past data analyses. For backward-comparison reasons it is also considered in this report.
 
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/cni_effect_illustration.pdf}
 \caption{%
-Illustration of the effects due to the Coulomb interaction, using the KL formula. For the SWY formula, the picture is similar, however it misses the effects at $|t| \gtrsim 0.02\un{GeV^2}$. The curves show a response of the interference formula to different nuclear phases with a purely exponential nuclear modulus. The solid curves correspond to phases of the same shape (constant) but different values of $\rho$: the maximal response can be seen at $|t| \lesssim 0.01\un{GeV^2}$. Conversely, the dashed lines correspond to phases with fixed $\rho$ but various shapes (the same examples as in Figure~\ref{fig:phase illustration}): response sizeable at $|t| \gtrsim 0.02\un{GeV^2}$.
+Illustration of the effects due to the Coulomb interaction, using the KL formula. For the SWY formula, the picture is similar, however it misses the effects at $|t| \gtrsim 0.02\un{GeV^2}$. The curves show a response of the interference formula to different nuclear phases with a purely exponential nuclear modulus. The solid curves correspond to phases of the same shape (constant) but different values of $\rho$: the maximal response can be seen at $|t| \lesssim 0.01\un{GeV^2}$. Conversely, the dashed lines correspond to phases with fixed $\rho$ but various shapes (the same examples as in Figure~\ref{fig:phase illustration}): the response is sizeable at $|t| \gtrsim 0.02\un{GeV^2}$.
 }
 \label{fig:cni effect}
 \end{center}
 \end{figure*}
 
-The {\bf Kundr\' at-Lokaj\' i\v cek formula (KL)} \cite{kl94}, generalising the work of Cahn \cite{cahn82}, was derived in an impact parameter formalism and is based on the additivity of eikonals. The derivation does not impose any limit on the nuclear amplitude and the formula naturally incorporates the electromagnetic form factor:\footnote{%
-Note that many recent publications by the same authors contain a misprint: wrong sign in front of the second term contributing to $G(t)$.
+The {\bf Kundr\' at-Lokaj\' i\v cek formula (KL)} \cite{kl94}, generalising the work of Cahn \cite{cahn82}, was derived in an impact parameter formalism and is based on the additivity of eikonals. The derivation does not impose any limit on the nuclear amplitude, and the formula naturally incorporates the electromagnetic form factor:\footnote{%
+Note that some recent publications by the same authors (e.g.~\cite{kl05,kklp11}) contain a misprint: the wrong sign in front of the second term contributing to $G(t)$.
 }
 \begin{equation}
 \label{eq:int kl}
@@ -161,7 +158,7 @@ A slightly different variant proposed in Eq.~(22) in~\cite{kl05} was considered,
 	{\d\sigma\over \d t}^{\rm C+N} = {\pi (\hbar c)^2 \over s p^2} \left | {\alpha s\over t} {\cal F}^2
 		+ {\cal A}^{\rm N}\, \e^{- \I\alpha G(t)} \right |^2 \ .
 \end{equation}
-Since the $G$ quantity is complex, the interference effects in this treatment are generally more feature-rich than with SWY formula, Eq.~(\ref{eq:int swy}), where the interference is reduced to a single additional phase $\Phi$.
+Since the quantity $G$ is complex, the interference effects in this treatment are generally more feature-rich than with the SWY formula, Eq.~(\ref{eq:int swy}), where the interference is reduced to a single additional phase $\Phi$.
 
 By analysing the formulae Eq.~(\ref{eq:int swy}) and (\ref{eq:int kl}), one can conclude that in the region where the nuclear amplitude dominates ($|t| \gtrsim 0.003\un{GeV^2}$), the effects due to the Coulomb interaction are of the order of $\alpha$ or the ratio ${\cal A}^{\rm C} / {\cal A}^{\rm N}$. In both cases, the magnitude of the interference effects can be expected at a percent level, as shown in Figure~\ref{fig:cni effect}. The figure also shows that the effects at different $|t|$ probe different parts of the nuclear phase: maximum sensitivity to $\rho$ lies at very low $|t|$ while at higher $|t|$ the effects are sensitive to phase values at slightly higher $|t|$. It can also be observed that for the constant, standard and Bailly phase the effects are very similar and rather mild at higher $|t|$. This can be understood from a very limited variation of the phase at low $|t|$, which is the region contributing most to the integral in Eq.~(\ref{eq:int kl}). On the contrary, the higher $|t|$ response to peripheral phases can have various forms, often similar to the deviation of the reconstructed cross-section from pure-exponential, see the top plots in Figures~\ref{fig:fit exp1} and~\ref{fig:fit exp3}.
 
@@ -183,7 +180,7 @@ The standard least-squares method was used for all the fits. In particular, mini
 	\Delta_i = \left.{\d\sigma\over \d t}\right|_{{\rm bin}\ i} - {\d\sigma^{\rm C+N}\over\d t}\left(t^{\rm rep}_{{\rm bin}\ i}\right)\ ,\qquad
 	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
-where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at representative points $t^{\rm rep}$ of each bin \cite{lafferty94}. The minimisation is repeated several times, and the representative points are updated between iterations. The CNI effects are calculated using the computer code from~\cite{elegent}. The covariance matrix $\mat V$ has two components. The diagonal of $\mat V_{\rm stat}$ contains the statistical uncertainty squared from Table~\ref{tab:data} and from the Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except the normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. For improved fit stability, the normalisation uncertainty is not included in the $\chi^2$ definition. Instead, the uncertainty is propagated for each fit parameter. For this purpose, the fit is repeated with $-1\un{\sigma}$, $0\un{\sigma}$ and $+1\un{\sigma}$ biases independently in: global normalisation ($1\un{\sigma} = 4.2\un{\%}$), $90\un{m}$ data normalisation ($0.08\un{\%}$) and $1000\un{m}$ data normalisation ($0.25\un{\%}$). This gives a sample of 27 fit results, from which one can estimate the propagated normalisation uncertainty of a parameter as $(\hbox{max} - \hbox{min})/2$, where ``max'' (``min'') is the greatest (smallest) value in the sample. This normalisation uncertainty is, at the end, added quadratically to the uncertainty reported by the fit with no bias.
+where $\Delta$ is a vector of differences between the differential cross-section data and a fit function $\d\sigma^{C+N}/\d t$ evaluated at the representative point $t^{\rm rep}$ of each bin~\cite{lafferty94}. The minimisation is repeated several times, and the representative points are updated between iterations. The CNI effects are calculated using the computer code from~\cite{elegent}. The covariance matrix $\mat V$ has two components. The diagonal of $\mat V_{\rm stat}$ contains the statistical uncertainty squared from Table~\ref{tab:data} and from the Table~3 in \cite{8tev-90m}. $\mat V_{\rm syst}$ includes all systematic uncertainty contributions except the normalisation, see Eq.~(\ref{eq:covar mat}) and Eq.~(14) in \cite{8tev-90m}. For improved fit stability, the normalisation uncertainty is not included in the $\chi^2$ definition. Instead, the uncertainty is propagated for each fit parameter. For this purpose, the fit is repeated with $-1\un{\sigma}$, $0\un{\sigma}$ and $+1\un{\sigma}$ biases independently in: global normalisation ($1\un{\sigma} = 4.2\un{\%}$), $90\un{m}$ data normalisation ($0.08\un{\%}$) and $1000\un{m}$ data normalisation ($0.25\un{\%}$). This gives a sample of 27 fit results, from which one can estimate the propagated normalisation uncertainty of a parameter as $(\hbox{max} - \hbox{min})/2$, where ``max'' (``min'') is the greatest (smallest) value in the sample. This normalisation uncertainty is, at the end, added quadratically to the uncertainty reported by the fit with no bias.
 
 
 The fits have shown extremely low sensitivity to several of the above presented choices, summarised in the following list. 
@@ -235,7 +232,7 @@ The goal of this section is to test whether the data are compatible with a purel
 \begin{center}
 \includegraphics{fig/fit_exp1/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp1/phase_cni_effect.pdf}
-\caption{Visualisation of fit results from Table~\ref{tab:fit exp1} obtained with $N_b=1$. The continuous (dashed) lines correspond to fits with KL (SWY) formula. Note that the fits with constant nuclear phase largely overlap.
+\caption{Visualisation of the fit results from Table~\ref{tab:fit exp1} obtained with $N_b=1$. The continuous (dashed) lines correspond to fits with KL (SWY) formula. Note that the fits with constant nuclear phase largely overlap.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
@@ -244,8 +241,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \end{center}
 \end{figure*}
 
-Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad fit quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY formula, its application to the presented data is excluded, too.
-
+Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentially identical and have bad quality. The step-2 fit using both $\beta^*=1000$ and $90\un{m}$ data can be excluded with $7.6\un{\sigma}$ significance. Consequently, since the combination of $N_b=1$ and constant phase is the only one compatible with the SWY approach, that formula is experimentally excluded even on the basis of only the low-$|t|$ data set discussed here. The existence of the diffractive minimum -- also observed at $\sqrt{s} = 8\,$TeV and to be published in a forthcoming article -- provides another striking proof of the invalidity of the SWY formula.
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
 \begin{itemize}
@@ -298,7 +294,7 @@ Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very 
 \begin{center}
 \includegraphics{fig/fit_exp3/t_dist_rel_with_fit.pdf}
 \includegraphics{fig/fit_exp3/phase_cni_effect.pdf}
-\caption{Visualisation of fit results from Table~\ref{tab:fit exp3} obtained with KL formula and $N_b=3$. The solid lines correspond to fits with different nuclear phases.
+\caption{Visualisation of the fit results from Table~\ref{tab:fit exp3} obtained with KL formula and $N_b=3$. The solid lines correspond to fits with different nuclear phases.
 TOP: fits compared to differential cross-section data in a relative reference frame, see the vertical axis label. The reference is identical to the one in \cite{8tev-90m}. 
 BOTTOM LEFT: $t$-dependence of the nuclear phase as extracted from the fits.
 BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fits.
@@ -311,7 +307,7 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/rho_s.pdf}
-\caption{Energy dependence of the $\rho$ parameter. The blue (green) triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} -- note that most of these points were determined with the help of the SWY formula, shown to be inconsistent with the presented data. The hollow red circle stands for the earlier indirect determination by TOTEM~\cite{epl101-tot}. The filled red circle represents the two results from Table~\ref{tab:fit exp3} which are numerically identical within the resolution. The black curve gives the preferred $\rm pp$ model by COMPETE~\cite{compete}, obtained without using LHC data.
+\caption{Energy dependence of the $\rho$ parameter. The blue (green) triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} -- note that most of these points were determined with the help of the SWY formula, shown to be inconsistent with the present data. The hollow red circle stands for the earlier indirect determination by TOTEM~\cite{epl101-tot}. The filled red circle represents the two results from Table~\ref{tab:fit exp3} which are numerically identical within the resolution. The black curve gives the preferred $\rm pp$ model by COMPETE~\cite{compete}, obtained without using LHC data.
 }%
 \label{fig:rho cmp exp3}
 \end{center}
@@ -326,7 +322,7 @@ It is interesting to study the fit behaviour in the impact-parameter space. The 
 \label{eq:prof fun}
 	{\cal P}(b) = {1\over 4 p \sqrt s} \int\limits_{-\infty}^0 \d t\,J_0(b\sqrt{-t})\,{\cal A}^{\rm N}(t)\ .
 \end{equation}
-The profile functions for the two fits from Table~\ref{tab:fit exp3} are shown in Figure~\ref{fig:bdist exp3}. The fit with constant nuclear phase gives a distribution peaked at $b=0$. It corresponds to a behaviour that is more central than for the fit with peripheral phase, where the most frequent impact parameter value is $b\approx 1.2\un{fm}$. This observation can be generalised to non-elastic channels, too. Following Section~3 in~\cite{klk02}, one can calculate mean values of $b^2$ for elastic ($\langle b^2\rangle_{\rm el}$), inelastic ($\langle b^2\rangle_{\rm inel}$) or all ($\langle b^2\rangle_{\rm tot}$) collisions:
+The profile functions for the two fits from Table~\ref{tab:fit exp3} are shown in Figure~\ref{fig:bdist exp3}. The fit with constant nuclear phase gives a distribution peaked at $b=0$. It corresponds to a behaviour that is more central than for the fit with peripheral phase, where the most frequent impact parameter value is $b\approx 1.2\un{fm}$. These considerations can be extended to inelastic channels. Following Section~3 in~\cite{klk02}, one can calculate the mean values of $b^2$ for elastic ($\langle b^2\rangle_{\rm el}$), inelastic ($\langle b^2\rangle_{\rm inel}$) or all ($\langle b^2\rangle_{\rm tot}$) collisions:
 \begin{equation}
 \label{eq:ms b}
 	\langle b^2\rangle_j = {
